# liboro

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALL  LICENSE  Makefile.in  README  aclocal.m4  autogen.sh  configure.ac  generate_oro_library_from_ontology.py  liboro.pc.in
conf/: FindBoost.cmake  FindYARP.cmake  LiboroVersion.cmake  TargetDoc.cmake
liboro-src/: CMakeLists.txt  class.cpp  concepts.cpp  dummy_connector.cpp  dummy_connector.h  ontology.cpp  oro.h  oro_connector.h  oro_event.h  oro_exceptions.h  oro_library.cpp  oro_library.h  position.h  property.cpp  socket_connector.cpp  socket_connector.h  statement.cpp  yarp_connector.cpp  yarp_connector.h
oro-apps-src/: CMakeLists.txt  oro_benchmark.cpp  oro_export.cpp  oro_query.cpp  oro_stats.cpp  oro_test.cpp  oro_test_suite.cpp
oro-benchmark-src/: CMakeLists.txt  oro_benchmark.cpp
sparql/: discussion.sparql  green_objects.sparql  robots.sparql  seen_objects.sparql
src/: CMakeLists.txt  Makefile.in  Makefile.in~  class.cpp  concept.cpp  concepts.cpp  dummy_connector.cpp  dummy_connector.h  liboro-test.cpp  liboro.cpp  liboro.cpp~  liboro.h  liboro.h~  ontology.cpp  oro.h  oro_benchmark.cpp  oro_connector.h  oro_exceptions.h  oro_library.cpp  oro_library.h  oro_test.cpp  position.h  property.cpp  socket_connector.cpp  socket_connector.h  statement.cpp  yarp_connector.cpp  yarp_connector.h
testing/: CMakeLists.txt  oro_benchmark.cpp  oro_test.cpp
tools/: CMakeLists.txt  oro_add.cpp  oro_stats.cpp  oro_test.cpp  oro_test_suite.cpp
